clusters/overlays/cluster1/quarkuscoffeshop-web/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quarkuscoffeshop-web
  labels:
    app: quarkuscoffeshop-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quarkuscoffeshop-web
  template:
    metadata:
      name: quarkuscoffeshop-web
      labels:
        app: quarkuscoffeshop-web
        app.kubernetes.io/component: quarkuscoffeshop-web
        app.kubernetes.io/instance: quarkuscoffeshop-web
        app.kubernetes.io/part-of: quarkuscoffeshop
        quarkuscoffeshop: ""
        app.openshift.io/runtime-namespace: quarkuscoffeeshop-demo
    spec:
      containers:
        - name: quarkuscoffeshop-web
          image: jeremydavis/quarkuscoffeshop-web:2.4.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
