clusters/overlays/cluster1/quarkuscoffeshop-web/patch-env.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quarkuscoffeshop-web
spec:
  template:
    spec:
      containers:
        - name: quarkuscoffeshop-web
